# crypto-api

./: .env.example  .gitignore  .npmrc  .replit  AI_SENTIMENT_ENHANCEMENT_COMPLETE.md  AI_SIGNAL_FIX_SUMMARY.md  AI_SIGNAL_PROBLEM_ANALYSIS.md  ANALISIS_KODE_DAN_PERBAIKAN_BUG.md  ANTI_LUMPUH_RESILIENCE_REPORT.md  API_CONFLICT_ANALYSIS.md  API_ENDPOINTS_VERIFICATION.md  API_INTEGRATION_ANALYSIS_REPORT.md  AUTO_DEPLOYMENT_SETUP.md  BACKTESTING_FRAMEWORK_SUMMARY.md  COINAPI_COINGLASS_STATUS_REPORT.md  COINAPI_FIX_GUIDE.md  COMPLETE_GPT_API_ANALYSIS.md  DEPLOYED_SERVICES_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_READY_SUMMARY.md  DUAL_TELEGRAM_BOT_SETUP.md  Dockerfile  FINAL_SUMMARY.md  GITHUB_PUSH_STATUS.md  GITHUB_STATUS_SUMMARY.md  GITHUB_VPS_SYNC_ANALYSIS.md  GPT_API_SCHEMA.md  GPT_ENDPOINTS_COMPREHENSIVE.md  GPT_PUMP_DETECTION_GUIDE.md  HASIL_TESTING_CRITICAL_PATH.md  HEATMAP_MERGER_ANALYSIS.md  HYBRID_FALLBACK_IMPLEMENTATION.md  IMPLEMENTASI_PERBAIKAN_SEGERA.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_ROADMAP.md  INTEGRATION_STATUS_ANALYSIS.md  INVESTIGATION_REPORT_AND_ACTION_PLAN.md  LANGKAH_SELANJUTNYA.md  LAPORAN_REVIEW_FINAL_KOMPREHENSIF_BAHASA_INDONESIA.md  (+139 more)
.migration-backup-20251023-120158/: index-dev.ts  index_fixed.ts  replit.md
.migration-backup-20251023-121254/: package.json
.well-known/: ai-plugin.json
.wisang_geni/: knowledge_base.json
ai_agent/: config.py  log_reader.py  notifier.py  openai_auto_fixer.py  shell_executor.py
attached_assets/: Backpropragation_1758117124543.txt  CryptoSatX.postman_collection_1757171391974.json  Pasted--Analisis-Dashboard-Sinyal-Jual-yang-Kuat-dan-Bahaya-Manipulasi-Dashboard-ini-memberikan-wawasan-ya-1757311586759_1757311586759.txt  Pasted--Checklist-Hari-Ini-CoinGlass-V4-A-Orientation-Setup-Verifikasi-base-REST-v4-https-open--1758364413048_1758364413049.txt  Pasted--openapi-3-1-0-schema-https-spec-openapis-org-oas-3-1-0-info-tit-1756967694374_1756967694375.txt  (+171 more)
server/: db.ts  (+11 more)
(+623 files in other folders)
