[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.10",
    "bcrypt>=4.3.0",
    "python-jose>=3.5.0",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
]
