[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "asyncio>=4.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "websockets>=15.0.1",
]
